2006-10-26  Darin Adler  <darin@apple.com>

        - oops, checked in failure results, not success

        * fast/js/string-property-iteration-expected.txt:
        Successful results.

2006-10-26  Darin Adler  <darin@apple.com>

        - checked in some missing results
          (if these are wrong we could remove or disable the test)

        * svg/hixie/cascade/002-expected.checksum: Added.
        * svg/hixie/cascade/002-expected.png: Added.
        * svg/hixie/cascade/002-expected.txt: Added.

2006-10-26  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - add a test for iteration of properties of string objects

        * fast/js/resources/string-property-iteration.js: Added.
        * fast/js/string-property-iteration-expected.txt: Added.
        * fast/js/string-property-iteration.html: Added.

2006-10-24  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.

        - re-enable testing of HEAD methods, now that bugs relating to these are fixed

        * http/tests/xmlhttprequest/methods-async-expected.txt:
        * http/tests/xmlhttprequest/methods-async.html:
        * http/tests/xmlhttprequest/methods-expected.txt:
        * http/tests/xmlhttprequest/methods.html:

2006-10-24  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin

        <http://bugs.webkit.org/show_bug.cgi?id=10993>
        GMail Editor: Caret doesn't always position itself after list marker

        * editing/execCommand/create-list-1-expected.checksum: Added.
        * editing/execCommand/create-list-1-expected.png: Added.
        * editing/execCommand/create-list-1-expected.txt: Added.
        * editing/execCommand/create-list-1.html: Added.
        
        Fixed:
        * editing/execCommand/create-list-with-hr-expected.checksum:
        * editing/execCommand/create-list-with-hr-expected.png:
        * editing/execCommand/create-list-with-hr-expected.txt:
        * editing/execCommand/create-list-with-hr.html: