@@ -1,3 +1,15 @@
+2006-10-26  Darin Adler  <darin@apple.com>
+
+        Reviewed by Anders.
+
+        - removed non-deterministic behavior in editing that was causing
+          give inconsistent results for editing/pasteboard/copy-paste-bidi.html
+
+        * editing/ReplaceSelectionCommand.cpp:
+        (WebCore::ReplaceSelectionCommand::removeRedundantStyles):
+        Use two vectors instead of a map: more efficient, deterministic. There was no
+        reason to use a hash table.
+
 2006-10-26  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Anders.
